Add .env file for docker to allow env specific variables

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
 
   application:
     build: .
+    env_file:
+      - .env
     environment:
       - RAILS_ENV=development
       - REDIS_HOST=redis:6379
